--- a/my-page/package.json
+++ b/my-page/package.json
@@ -5,10 +5,15 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.207",
+    "gatsby-image": "^1.0.39",
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-react-helmet": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.17",
-    "react-helmet": "^5.2.0"
+    "gatsby-plugin-typography": "^1.7.14",
+    "gatsby-transformer-sharp": "^1.6.21",
+    "python": "0.0.4",
+    "react-helmet": "^5.2.0",
+    "typography-theme-fairy-gates": "^0.15.11"
   },
   "keywords": [
     "gatsby"
